--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.skypine.rosen.serialtest"
+    package="com.jma.serialtest"
     android:sharedUserId="android.uid.system"
     android:versionCode="1"
     android:versionName="1.0" >
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.skypine.serialtest.SerialTestActivity"
+            android:name="com.jma.serialtest.SerialTestActivity"
             android:configChanges="locale|layoutDirection|fontScale|keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen"
             android:launchMode="singleInstance" >
             <intent-filter>
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.skypine.serialtest.MountReceiver" >
+        <receiver android:name="com.jma.serialtest.MountReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_MOUNTED" />
 
